@startuml validator02
class ValidatorValueRegistry{
  -static ValidatorRegistry validatorRegistration;
  -static final HashMap<String, Class<? extends ValidableValue>> VALIDATES 
  -ValidatorValueRegistry() 
  +ValidableValue getValidator(String validateName)
  +void addValidator(String validateName, Class<? extends ValidableValue> validate) 
  +static synchronized ValidatorRegistry getInstance() 
}
class ValidatorLengthRegistry{
  -static ValidatorRegistry validatorRegistration;
  -static final HashMap<String, Class<? extends ValidableLength>> VALIDATES 
  -ValidatorLengthRegistry() 
  +ValidableLength getValidator(String validateName)
  +void addValidator(String validateName, Class<? extends ValidableLength> validate) 
  +static synchronized ValidatorRegistry getInstance() 
}
class ValidatorValueComposite{
  -HashMap<String, ArrayList<String>> listValidate
  -ValidatorValueRegistry validatorRegistration
  +HashMap<String, ErrorValidate> validate(Client client)
  -HashMap<String, ErrorValidate> getError()
  -void addValidate(String key, String value)  
}
class ValidatorLengthComposite{
  - private Map<String, ArrayList<StringLimit>> listValidate
  -ValidatorLengthRegistry validatorRegistration
  +HashMap<String, ErrorValidate> validate(Client client)
  -HashMap<String, ErrorValidate> getError()
  -void addValidate(String key, String value)  
}
class AddClient {
  -ValidatorValueComposite clientValidatorComposite
  -Class Client
   # doPost()
   # doGet()
}
class  HttpServlet{
}
class GetDataControlFromValue{
  +static String getDataControlClient(Client client, String value) 
}


ValidatorValueComposite *-- ValidatorValueRegistry
ValidatorLengthComposite *-- ValidatorLengthRegistry
HttpServlet  <|--  AddClient 
AddClient  *-- ValidatorValueComposite
AddClient  *-- ValidatorLengthComposite
AddClient o-- GetDataControlFromValue
@enduml